# fizmo

./: .gitmodules  CHANGELOG.md  CHANGELOG.txt  COPYRIGHT.md  COPYRIGHT.txt  INSTALL.md  INSTALL.txt  LICENSE.md  Makefile  Makefile.am  QUICKSTART.md  QUICKSTART.txt  README-0.7.md  README-0.7.txt  README.md  README.txt  build.sh  config.default.mk  config.macports.mk  configure.ac  user-config-example.txt
doc/: ascii.xslt  changelog-ascii.xslt  changelog-html.xslt  changelog-md.xslt  changelog.xml  copyright.xml  create-mds.sh  create-txts.sh  install.xml  license.xml  md.xslt  quickstart.xml  readme-0.7.xml  readme.xml
